--- a/app/src/main/res/layout/screen_saved.xml
+++ b/app/src/main/res/layout/screen_saved.xml
@@ -129,7 +129,7 @@
         android:id="@+id/imgNoBooks"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/bookshelf"
+        android:src="@drawable/bookshelf2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
