--- a/app/src/main/res/layout/screen_about_book.xml
+++ b/app/src/main/res/layout/screen_about_book.xml
@@ -177,6 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
+                android:justificationMode="inter_word"
                 android:text="About book"
                 android:textColor="@color/black"
                 android:textSize="18sp"
